--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,14 +3,15 @@
         <h1>BURGER TOWN!</h1>
     </div>
 </div>
+
 <div class="row justify-content-md-center bg-blue-1 p-5">
     <div class="col-4">
-        <img src="./assets/burger.svg" alt="A burger">
+        <img class="glow" src="./assets/burger.svg" alt="A burger">
     </div>
 </div>
 
 <div class="row bg-blue-1 p-5">
-    <div class="card col-8 mx-auto p-2 bg-blue-3">
+    <div class="card col-md-12 col-lg-8 mx-auto p-2 bg-blue-3">
         <form class="create-burger">
             <div class="input-group input-group-lg">
                 <div class="input-group-prepend">
@@ -31,7 +32,7 @@
         <div class="card">
             <h3 class="p-3">All the Burgers!</h3>
             <ul class="list-group">
-                {{#each burgers}}
+                {{#each burgersOrderedByName}}
                 {{> burgers/burger-item tried=false displayDevourButton=true}}
                 {{/each}}
             </ul>
@@ -42,7 +43,7 @@
         <div class="card">
             <h3 class="p-3">Undiscovered Burgers!</h3>
             <ul class="list-group">
-                {{#each burgers}}
+                {{#each burgersOrderedByName}}
                 {{#unless devoured}}
                 {{> burgers/burger-item tried=false displayDevourButton=false}}
                 {{/unless}}
@@ -55,7 +56,7 @@
         <div class="card">
             <h3 class="p-3">Burgers Devoured!</h3>
             <ul class="list-group">
-                {{#each burgers}}
+                {{#each burgersOrderedByDevoured}}
                 {{#if devoured}}
                 {{> burgers/burger-item tried=true displayDevourButton=false}}
                 {{/if}}
@@ -64,7 +65,4 @@
         </div>
     </div>
 </div>
-
-
-<script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
 <script src="/js/burger.js"></script>
