--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,11 @@
     text-transform: uppercase;
 }
 
+.glow {
+    -webkit-filter: drop-shadow( 0px 0px 50px rgb(255, 255, 255));
+    filter: drop-shadow( 0px 0px 50px rgb(255, 255, 255));
+}
+
 .bg-blue-1 { 
     background-color: rgb(167, 216, 213); 
 }
