--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,10 +1,10 @@
-<div class="row justify-content-md-center bg-blue-2">
-    <div class="col-4 p-5">
-        <h1>BURGER TOWN!</h1>
+<div class="row justify-content-center bg-blue-2">
+    <div class="col-md-4 p-5">
+        <h1><b>BURGER</b>TOWN</h1>
     </div>
 </div>
 
-<div class="row justify-content-md-center bg-blue-1 p-5">
+<div class="row justify-content-center bg-blue-1 p-5">
     <div class="col-4">
         <img class="glow" src="./assets/burger.svg" alt="A burger">
     </div>
