Fixed display issue with title

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
 <div class="row justify-content-center bg-blue-2">
-    <div class="col-md-4 p-5">
+    <div class="col p-5">
         <h1><b>BURGER</b>TOWN</h1>
     </div>
 </div>
