--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;700&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="bg-blue-3">
     <div class="container-fluid text-center">
         {{{ body }}}
     </div>
